hard-gists/1074551/run.log
=== Docker Run Log for 1074551 ===
Started at: Mi 29. Okt 11:49:38 CET 2025

[2025-10-29 11:49:39] START: Running container for 1074551
[2025-10-29 11:49:39] SUCCESS: Container 3035ccccfa4d6fa89c37e99352f1a5b239c43d9c8356bf471aac18cc1ca92657 started for 1074551
=== Container logs for 1074551 ===
  File "/snippet.py", line 25
    print 'Processing Step:', step.name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1074551 ===
[2025-10-29 11:49:41] INFO: Container 3035ccccfa4d6fa89c37e99352f1a5b239c43d9c8356bf471aac18cc1ca92657 has stopped
